Fix undefined first move, add score counter, add meta viewport tag, add styles for scores, fix styles on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,7 +25,7 @@ body::before {
     padding: 50px;
     color: #525252;
     position: relative;
-    width: 50%;
+    width: 55%;
     margin: 0 auto;
 
     h1 {
@@ -51,7 +51,7 @@ body::before {
             height: 70px;
             width: 180px;
             font-size: 24px;
-            margin: 0 20px;
+            margin: 5px 16px;
             color: white;
             background-color: #525252;
             border: 2px solid #525252;
@@ -87,9 +87,25 @@ body::before {
 
         div:first-child {
             margin-top: 60px;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
             font-weight: bold;
             font-size: 26px;
         }
+
+        div:last-child {
+            margin-top: 10px;
+            font-weight: bold;
+        }
+    }
+}
+
+@media (max-width: 767px) {
+    body {
+        background-size: cover;
+    }
+
+    .container {
+        width: 90%;
+        padding: 0;
     }
 }
